(mac) pan/pinch events rollup menus that we don't want to rollup
Categories
(Core :: Panning and Zooming, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | wontfix |
| firefox77 | --- | unaffected |
| firefox78 | --- | wontfix |
| firefox79 | --- | wontfix |
| firefox80 | --- | wontfix |
| firefox81 | --- | fixed |
People
(Reporter: tnikkel, Assigned: kats)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Basically the same bug as bug 1647546 except on mac and only affects pinch gestures.
Comment 1•5 years ago
|
||
Set release status flags based on info from the regressing bug 1634855
Updated•5 years ago
|
Updated•5 years ago
|
| Reporter | ||
Comment 2•5 years ago
|
||
Actually 78 is affected because all it takes is a pinch gesture on the trackpad to trigger this (no need to turn on desktop zooming or anything).
Comment 3•5 years ago
|
||
Hi, would you mind setting a severity for this one?
Comment 4•5 years ago
|
||
Setting S3 as pinch gestures are not likely to be very common without desktop zooming enabled.
Updated•5 years ago
|
| Assignee | ||
Comment 6•5 years ago
|
||
It seems like ShouldRollupOnMouseWheelEvent really means something more like
"ShouldRollupIfPageIsGonnaMove" so it seems appropriate to use in this
situation. Might be worth renaming the function at some point if my interpration
is correct, but the name propagates into xhtml attributes and such so it's
more than I want to do right now.
Comment 8•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Updated•5 years ago
|
Description
•