Bug 1648686 - Don't rollup the hamburger menu when pinching over content (on mac). r=tnikkel

It seems like ShouldRollupOnMouseWheelEvent really means something more like
"ShouldRollupIfPageIsGonnaMove" so it seems appropriate to use in this
situation. Might be worth renaming the function at some point if my interpration
is correct, but the name propagates into xhtml attributes and such so it's
more than I want to do right now.

Differential Revision: https://phabricator.services.mozilla.com/D86839